--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 <main class="container">
   <div class="bg-body-tertiary p-5 rounded">
     <h1> 吾与汝，皆自由</h1>
-    <p class="lead">Wochat，我聊，是一款百分百开源的即时通讯软件(IM: instant messaging)内核。Wochat的使命是集合全世界的力量，打造一款不受任何第三方控制的IM内核，在此基础上，任何人皆可创建属于自己的聊天软件，不受任何公司和政府的监控。</p> 
-   <p class="lead">我聊，打造属于自己的聊天软件。</p>
+    <p class="lead">Wochat，我聊，是一款百分百开源的即时通讯软件(IM: instant messaging)内核。Wochat的使命是集合全世界的力量，打造一款不受任何第三方控制的百分百开源的IM内核，在此基础上，任何人皆可轻松创建属于自己的聊天软件，不受任何公司和政府的监控。</p> 
+   <p class="lead">我聊，属于我自己的聊天软件。</p>
     <a class="btn btn-lg btn-primary" href=".." role="button">了解详情</a>
   </div>
 </main>
