--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
    <p class="lead">我聊，帮助每个人打造真正属于自己的聊天软件。</p>
    <a class="btn btn-lg btn-primary" href=".." role="button">了解详情</a>
    <p></p>
-   <p>Wochat is a 100% open-sourced IM(instant messaging) software kernel. Its dream is to create a high-quality, 100% open-sourced IM software kernel by the talents around the world. Everyone can easily create the IM software for himself/herself based on Wochat kernel.</p>
+   <p>Wochat is a 100% open-sourced IM(instant messaging) software kernel. Its dream is to create a high-quality, 100% open-sourced IM software kernel by the talents around the world. Everyone can easily create the IM software for himself/herself based on this kernel.</p>
   </div>
 </main>
 <script src="js/bootstrap.bundle.min.js"></script>
