--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
     <h1> 吾与汝，皆自由</h1>
 	<p class="lead"></p>
     <p class="lead">WoChat，我聊，是一款百分百开源的即时通讯(IM: instant messaging)软件的内核(kernel)。</p>
-    <p class="lead">WoChat的愿景是：集合全世界的力量，打造一款不受任何第三方控制的、百分百开源的、高质量的IM软件内核。在此基础上，每个人皆可轻松创建属于自己的聊天软件，不受任何公司和政府的监控。</p> 
+    <p class="lead">WoChat的愿景是：集合公众的力量，打造一款不受任何第三方控制的、百分百开源的、高质量的IM软件内核。在此基础上，每个人皆可轻松创建属于自己的聊天软件，不受任何公司和政府的监控。</p> 
    <p class="lead">我聊，帮助每个人打造真正属于自己的聊天软件。</p>
-   <a class="btn btn-lg btn-primary" href=".." role="button">了解详情</a>
+   <a class="btn btn-lg btn-primary" href="https://github.com/wochatyou/wochat" role="button">了解详情</a>
    <p></p>
    <p>WoChat is a high-quality, 100% open-sourced IM(instant messaging) software kernel. Its dream is to create an IM software kernel by the volunteers around the world. Based on this kernel, everyone can easily create his/her owned IM software that cannot be monitored or controlled by any companies or governments except himself/hershelf.</p>
   </div>
