--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
    <p class="lead">我聊，帮助每个人打造真正属于自己的聊天软件。</p>
    <a class="btn btn-lg btn-primary" target="_blank" href="https://github.com/wochatyou/wochat" role="button">了解详情</a>
    <p></p>
-   <p>WoChat is a high-quality, 100% open-sourced IM(instant messaging) software kernel. Its dream is to create an IM software kernel by the volunteers around the world. Based on this kernel, everyone can easily create his/her owned IM software that cannot be controlled or monitored by any companies or governments except himself/hershelf.</p>
+   <p>WoChat is a high-quality, 100% open-sourced IM(instant messaging) software kernel. Its mission is to create an IM software kernel by the volunteers around the world. Based on this kernel, everyone can easily create his/her owned IM software that cannot be controlled or monitored by any companies or governments.</p>
   </div>
 </main>
 <script src="js/bootstrap.bundle.min.js"></script>
