--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               id="bd-theme"
               type="button"
               aria-expanded="false"
-              data-bs-toggle="dropdown"
+<!--              data-bs-toggle="dropdown" -->
               aria-label="Toggle theme (auto)">
         <svg class="bi my-1 theme-icon-active" width="1em" height="1em"><use href="#circle-half"></use></svg>
         <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
