--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="auto">
+<html lang="en"> <!-- data-bs-theme="auto"> -->
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -109,11 +109,12 @@
               id="bd-theme"
               type="button"
               aria-expanded="false"
-<!--              data-bs-toggle="dropdown" -->
-              aria-label="Toggle theme (auto)">
+<!--              data-bs-toggle="dropdown"
+              aria-label="Toggle theme (auto)" -->>
         <svg class="bi my-1 theme-icon-active" width="1em" height="1em"><use href="#circle-half"></use></svg>
         <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
       </button>
+<!--
       <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
         <li>
           <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light" aria-pressed="false">
@@ -137,6 +138,7 @@
           </button>
         </li>
       </ul>
+-->
     </div>
 
     
