--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en"> <!-- data-bs-theme="auto"> -->
+<html lang="en"> data-bs-theme="auto">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -104,17 +104,17 @@
       </symbol>
     </svg>
 
+<!--
     <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
       <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center"
               id="bd-theme"
               type="button"
               aria-expanded="false"
-<!--              data-bs-toggle="dropdown"
-              aria-label="Toggle theme (auto)" -->>
+              data-bs-toggle="dropdown"
+              aria-label="Toggle theme (auto)" >
         <svg class="bi my-1 theme-icon-active" width="1em" height="1em"><use href="#circle-half"></use></svg>
-<!--        <span class="visually-hidden" id="bd-theme-text">Toggle theme</span> -->
+        <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
       </button>
-<!--
       <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
         <li>
           <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light" aria-pressed="false">
@@ -138,9 +138,8 @@
           </button>
         </li>
       </ul>
--->
     </div>
-
+-->
     
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
   <div class="container-fluid">
@@ -153,13 +152,10 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="https://www.wochat.org">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a class="nav-link" href="wochat.org">Link</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
