--- a/index.html
+++ b/index.html
@@ -149,10 +149,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="https://www.wochat.org">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="wochat.org">Link</a>
+          <a class="nav-link active" aria-current="page" href="https://wochat.org">Home</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
